unpackaged/main/default/objects/Lead/fields/JMC_Notas__c.field-meta.xml
<CustomField>
    <fullName>JMC_Notas__c</fullName>
    <label>Notas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>