unpackaged/main/default/objects/Lead/fields/JMC_NSS__c.field-meta.xml
<CustomField>
    <fullName>JMC_NSS__c</fullName>
    <description>NSS del cliente</description>
    <label>NSS</label>
    <length>11</length>
    <type>Text</type>
</CustomField>