unpackaged/main/default/objects/Lead/fields/JMC_OtroFraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>JMC_OtroFraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Segundo fraccionamiento de interés del cliente</description>
    <label>Otro Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Prospectos</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>