unpackaged/main/default/objects/Lead/fields/JMC_Perfilar__c.field-meta.xml
<CustomField>
    <fullName>JMC_Perfilar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perfilar</label>
    <type>Checkbox</type>
</CustomField>