unpackaged/main/default/objects/Lead/fields/JMC_Precalificacion__c.field-meta.xml
<CustomField>
    <fullName>JMC_Precalificacion__c</fullName>
    <description>Campo para capturar el monto de la precalificación</description>
    <label>Precalificación</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>