unpackaged/main/default/objects/Lead/fields/JMC_PresupuestoCompra__c.field-meta.xml
<CustomField>
    <fullName>JMC_PresupuestoCompra__c</fullName>
    <description>Presupuesto de compra estimado según el cliente</description>
    <label>Presupuesto de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menos de $500,000</fullName>
            </value>
            <value>
                <fullName>$500,001 a $700,000</fullName>
            </value>
            <value>
                <fullName>$700,001 a $1,000,000</fullName>
            </value>
            <value>
                <fullName>$1,000,001 a $2,000,000</fullName>
            </value>
            <value>
                <fullName>2,000,001 o más</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>