unpackaged/main/default/objects/Lead/fields/JMC_Programas__c.field-meta.xml
<CustomField>
    <fullName>JMC_Programas__c</fullName>
    <description>Campo para segmentar campañas de Facebook</description>
    <label>Programas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FOVISSSTE</fullName>
            </value>
            <value>
                <fullName>PRUEBA_EDOMEXICO</fullName>
            </value>
            <value>
                <fullName>PRUEBA_PRIVALIA</fullName>
            </value>
            <value>
                <fullName>PRUEBAS</fullName>
            </value>
            <value>
                <fullName>Carrusel</fullName>
            </value>
            <value>
                <fullName>Collage</fullName>
            </value>
            <value>
                <fullName>Video lead 1</fullName>
            </value>
            <value>
                <fullName>Video lead 2</fullName>
            </value>
            <value>
                <fullName>Video lead VM</fullName>
            </value>
            <value>
                <fullName>Collage VM</fullName>
            </value>
            <value>
                <fullName>Carrusel VM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>