unpackaged/main/default/objects/Lead/fields/JMC_ProspectadorMASComercial__c.field-meta.xml
<CustomField>
    <fullName>JMC_ProspectadorMASComercial__c</fullName>
    <label>Prospectador MAS Comercial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>