unpackaged/main/default/objects/Lead/fields/JMC_PuntosInfonavit__c.field-meta.xml
<CustomField>
    <fullName>JMC_PuntosInfonavit__c</fullName>
    <description>Campo para capturar la cantidad de Puntos Infonavit disponibles</description>
    <label>Puntos Infonavit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>