unpackaged/main/default/objects/Lead/fields/JMC_RangoSalarial__c.field-meta.xml
<CustomField>
    <fullName>JMC_RangoSalarial__c</fullName>
    <description>Catálogo con diferentes rangos de ingresos economicos del cliente</description>
    <label>Rango Salarial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 3,999</fullName>
            </value>
            <value>
                <fullName>4,000 - 7,999</fullName>
            </value>
            <value>
                <fullName>8,000 - 12,999</fullName>
            </value>
            <value>
                <fullName>13,000 - 15,999</fullName>
            </value>
            <value>
                <fullName>16,000 - 19,999</fullName>
            </value>
            <value>
                <fullName>20,000 - 24,999</fullName>
            </value>
            <value>
                <fullName>25,000 - 34,999</fullName>
            </value>
            <value>
                <fullName>35,000 - 54,999</fullName>
            </value>
            <value>
                <fullName>55,000 - 84,999</fullName>
            </value>
            <value>
                <fullName>85,000 - Más</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>