unpackaged/main/default/objects/Lead/fields/JMC_Re_Registro__c.field-meta.xml
<CustomField>
    <fullName>JMC_Re_Registro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que identifica si el lead ya existía y se actualizó desde un formulario</description>
    <label>Re-Registro</label>
    <type>Checkbox</type>
</CustomField>