unpackaged/main/default/objects/Lead/fields/JMC_SBLAccntId__c.field-meta.xml
<CustomField>
    <fullName>JMC_SBLAccntId__c</fullName>
    <externalId>true</externalId>
    <label>Siebel Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>