unpackaged/main/default/objects/Lead/fields/JMC_SituacionFovissste__c.field-meta.xml
<CustomField>
    <fullName>JMC_SituacionFovissste__c</fullName>
    <description>Estatus del crédito Fovissste</description>
    <label>Situación FOVISSSTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nunca me he registrado</fullName>
            </value>
            <value>
                <fullName>Me registré y no salí sorteado</fullName>
            </value>
            <value>
                <fullName>Salí sorteado,pero no ejercí el crédito</fullName>
            </value>
            <value>
                <fullName>Soy pensionado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>