unpackaged/main/default/objects/Lead/fields/JMC_SubCanalVenta__c.field-meta.xml
<CustomField>
    <fullName>JMC_SubCanalVenta__c</fullName>
    <description>Catálogo con los subcanales de venta disponibles</description>
    <label>Subcanal de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activación/Evento</fullName>
            </value>
            <value>
                <fullName>Activación/Evento/Periferia</fullName>
            </value>
            <value>
                <fullName>AGS Feria CANADEVI</fullName>
            </value>
            <value>
                <fullName>AGS Moctezuma</fullName>
            </value>
            <value>
                <fullName>AGS San Diego</fullName>
            </value>
            <value>
                <fullName>Ags Villa Asunción</fullName>
            </value>
            <value>
                <fullName>APP INVITADO</fullName>
            </value>
            <value>
                <fullName>Blogger/Tania Rendón</fullName>
            </value>
            <value>
                <fullName>Buen Fin</fullName>
            </value>
            <value>
                <fullName>Call Center / Telemarketing</fullName>
            </value>
            <value>
                <fullName>Cambaceo</fullName>
            </value>
            <value>
                <fullName>Cartelera Móvil</fullName>
            </value>
            <value>
                <fullName>Cartelera PV</fullName>
            </value>
            <value>
                <fullName>Cartera de Clientes</fullName>
            </value>
            <value>
                <fullName>Cartera Propia</fullName>
            </value>
            <value>
                <fullName>Cita Asesor</fullName>
            </value>
            <value>
                <fullName>Colaborador Javer</fullName>
            </value>
            <value>
                <fullName>Compañero de Trabajo</fullName>
            </value>
            <value>
                <fullName>Convenio Pabellon M</fullName>
            </value>
            <value>
                <fullName>Correo</fullName>
            </value>
            <value>
                <fullName>Correo Directo/Carta</fullName>
            </value>
            <value>
                <fullName>Edo Mex Samara</fullName>
            </value>
            <value>
                <fullName>En Empresa (Venta Empresarial)</fullName>
            </value>
            <value>
                <fullName>Espectacular/Cartelera</fullName>
            </value>
            <value>
                <fullName>Eventos (Macroventa, Súpervta)</fullName>
            </value>
            <value>
                <fullName>Expo/Feria</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook Inbox</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>FB Asesor Orgánico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>