unpackaged/main/default/objects/Lead/fields/JMC_Subcuenta__c.field-meta.xml
<CustomField>
    <fullName>JMC_Subcuenta__c</fullName>
    <description>Campo para capturar el monto subcuenta</description>
    <label>Subcuenta</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>