unpackaged/main/default/objects/Lead/fields/JMC_TiempoDeCompra__c.field-meta.xml
<CustomField>
    <fullName>JMC_TiempoDeCompra__c</fullName>
    <description>Periodo de compra estimado para  la compra de una vivienda</description>
    <label>Periodo de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 a 3 meses</fullName>
            </value>
            <value>
                <fullName>3 a 6 meses</fullName>
            </value>
            <value>
                <fullName>6 a 12 meses</fullName>
            </value>
            <value>
                <fullName>Más de 12 meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>