unpackaged/main/default/objects/Lead/fields/JMC_TipoCredito__c.field-meta.xml
<CustomField>
    <fullName>JMC_TipoCredito__c</fullName>
    <description>Catálogo con los tipos de crédito</description>
    <label>Tipo de Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BANSEFI</fullName>
            </value>
            <value>
                <fullName>BANJERCITO</fullName>
            </value>
            <value>
                <fullName>COFINAVIT</fullName>
            </value>
            <value>
                <fullName>CONTADO</fullName>
            </value>
            <value>
                <fullName>FOVISSSTE</fullName>
            </value>
            <value>
                <fullName>INFONAVIT</fullName>
            </value>
            <value>
                <fullName>ISSFAM</fullName>
            </value>
            <value>
                <fullName>ISSSTELEON</fullName>
            </value>
            <value>
                <fullName>PENSIONES</fullName>
            </value>
            <value>
                <fullName>SHF/BANCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>