unpackaged/main/default/objects/Lead/fields/JMC_TipoSolicitudFovissste__c.field-meta.xml
<CustomField>
    <fullName>JMC_TipoSolicitudFovissste__c</fullName>
    <description>Indica la forma en que solicitan el crédito</description>
    <label>Tipo solicitud FOVISSSTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Mancomunado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>