unpackaged/main/default/objects/Lead/fields/JMC_UEN__c.field-meta.xml
<CustomField>
    <fullName>JMC_UEN__c</fullName>
    <description>Campo para identificar la UEN del fraccionamiento de interés</description>
    <label>UEN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>