unpackaged/main/default/objects/Lead/fields/JMC_UnidadNegocio__c.field-meta.xml
<CustomField>
    <fullName>JMC_UnidadNegocio__c</fullName>
    <description>Campo calculado para identificar la UEN del fraccionamiento de interés</description>
    <formula>JMC_Fraccionamiento__r.Plaza__c</formula>
    <label>Unidad de Negocio</label>
    <type>Text</type>
</CustomField>