unpackaged/main/default/objects/Lead/fields/JMC_ValidardatosSiebel__c.field-meta.xml
<CustomField>
    <fullName>JMC_ValidardatosSiebel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para detonar el envío a MAS Comercial o reprocesar un registro</description>
    <label>Validar datos Siebel</label>
    <type>Checkbox</type>
</CustomField>