unpackaged/main/default/objects/Lead/fields/JMC_WSResponseEx__c.field-meta.xml
<CustomField>
    <fullName>JMC_WSResponseEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WS Response Exc</label>
    <type>Checkbox</type>
</CustomField>