unpackaged/main/default/objects/Lead/fields/JMC_Zona__c.field-meta.xml
<CustomField>
    <fullName>JMC_Zona__c</fullName>
    <description>Campo para capturar las zonas de interés</description>
    <label>Zona</label>
    <length>50</length>
    <type>Text</type>
</CustomField>