unpackaged/main/default/objects/Lead/fields/Lugar_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_Nacimiento__c</fullName>
    <label>Lugar de Nacimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lugar_Nacimiento</valueSetName>
    </valueSet>
</CustomField>