unpackaged/main/default/objects/Lead/fields/MsgResponseWS__c.field-meta.xml
<CustomField>
    <fullName>MsgResponseWS__c</fullName>
    <description>Campo para el monitoreo de la respuesta del servicio integrado con Siebel</description>
    <label>Mensaje Siebel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>