unpackaged/main/default/objects/Lead/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <defaultValue>&#39;Mexicana&#39;</defaultValue>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nacionalidad</valueSetName>
    </valueSet>
</CustomField>