unpackaged/main/default/objects/Lead/fields/Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Ocupacion__c</fullName>
    <label>Ocupación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ocupacion</valueSetName>
    </valueSet>
</CustomField>