unpackaged/main/default/objects/Lead/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <formula>TEXT(JMC_Fraccionamiento__r.Prototipo__c)</formula>
    <label>Prototipo</label>
    <type>Text</type>
</CustomField>