unpackaged/main/default/objects/Lead/fields/Recomendante__c.field-meta.xml
<CustomField>
    <fullName>Recomendante__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recomendante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospectos Recomendados</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>