unpackaged/main/default/objects/Lead/fields/RFC_Base__c.field-meta.xml
<CustomField>
    <fullName>RFC_Base__c</fullName>
    <label>RFC Base</label>
    <length>10</length>
    <type>Text</type>
</CustomField>