unpackaged/main/default/objects/Lead/fields/RFC_Completo__c.field-meta.xml
<CustomField>
    <fullName>RFC_Completo__c</fullName>
    <formula>RFC_Base__c + Homoclave__c</formula>
    <label>RFC Completo</label>
    <type>Text</type>
</CustomField>