unpackaged/main/default/objects/Lead/fields/Talkdesk__c.field-meta.xml
<CustomField>
    <fullName>Talkdesk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica leads que hayan sido creados en automático por el IVR</description>
    <label>Talkdesk</label>
    <type>Checkbox</type>
</CustomField>