unpackaged/main/default/objects/Lead/fields/Tipo_Baja__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Baja__c</fullName>
    <label>Tipo de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Baja</valueSetName>
    </valueSet>
</CustomField>