unpackaged/main/default/objects/Lead/fields/Tipo_Contribuyente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Contribuyente__c</fullName>
    <label>Tipo de Contribuyente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Contribuyente</valueSetName>
    </valueSet>
</CustomField>