unpackaged/main/default/objects/Lead/fields/Tipo_Economia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Economia__c</fullName>
    <label>Tipo de Economía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Economia</valueSetName>
    </valueSet>
</CustomField>