unpackaged/main/default/objects/Lead/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>Campo para formulario de sitio javer</description>
    <label>utm_medium</label>
    <length>45</length>
    <type>Text</type>
</CustomField>