unpackaged/main/default/objects/Lead/fields/Website_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Website_Lead_ID__c</fullName>
    <description>Campo que almacena el ID de leads provenientes del sitio web javer</description>
    <externalId>true</externalId>
    <label>Website Lead ID</label>
    <length>45</length>
    <type>Text</type>
</CustomField>