unpackaged/main/default/objects/Lead/validationRules/CURP.validationRule-meta.xml
<ValidationRule>
    <fullName>CURP</fullName>
    <active>true</active>
    <description>Regla para validar que solo se ingresen 18 caracteres en el campo curp.</description>
    <errorConditionFormula>AND (NOT(ISBLANK(JMC_CURP__c)),

LEN(  JMC_CURP__c ) &gt; 18)</errorConditionFormula>
    <errorDisplayField>JMC_CURP__c</errorDisplayField>
    <errorMessage>No se admiten más de 18 caracteres.</errorMessage>
</ValidationRule>