unpackaged/main/default/objects/Lead/validationRules/Fecha_LiberacionCreditoYY.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_LiberacionCreditoYY</fullName>
    <active>true</active>
    <description>Solicitar como obligatorio el campo fecha liberación de crédito YY cuando se asigne el análisis interno Aumento de crédito.</description>
    <errorConditionFormula>AND (
ISPICKVAL(JMC_Analisisinterno__c , &#39;Aumento de crédito&#39;),
ISBLANK(JMC_FechaLibCredYY__c)
)</errorConditionFormula>
    <errorDisplayField>JMC_FechaLibCredYY__c</errorDisplayField>
    <errorMessage>Obligatorio el campo &#39;Fecha liberación de crédito YY&#39;</errorMessage>
</ValidationRule>