unpackaged/main/default/objects/Lead/validationRules/NSS.validationRule-meta.xml
<ValidationRule>
    <fullName>NSS</fullName>
    <active>false</active>
    <description>Regla para solo permitir 11 caracteres en el campo del NSS</description>
    <errorConditionFormula>AND (NOT(ISBLANK(JMC_NSS__c)),

LEN( JMC_NSS__c) != 11)</errorConditionFormula>
    <errorDisplayField>JMC_NSS__c</errorDisplayField>
    <errorMessage>Sólo se permiten 11 caracteres.</errorMessage>
</ValidationRule>