unpackaged/main/default/objects/Lead/listViews/Brandon_Registros_QRoo_Marzo_2021.listView-meta.xml
<ListView>
    <fullName>Brandon_Registros_QRoo_Marzo_2021</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>JMC_Fraccionamiento__c</columns>
    <columns>JMC_Fuente__c</columns>
    <columns>JMC_EstatusLead__c</columns>
    <columns>JMC_FechaNacimiento__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>JMC_Estado__c</field>
        <operation>equals</operation>
        <value>Quintana Roo</value>
    </filters>
    <label>Brandon - Registros QRoo Abril 2021</label>
</ListView>