unpackaged/main/default/objects/Lead/listViews/Copia_de_Leads_sin_fraccionamiento.listView-meta.xml
<ListView>
    <fullName>Copia_de_Leads_sin_fraccionamiento</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>JMC_Analisisinterno__c</columns>
    <columns>JMC_FechaNacimiento__c</columns>
    <columns>JMC_Fraccionamiento__c</columns>
    <columns>JMC_TipoCredito__c</columns>
    <columns>JMC_CanalVenta__c</columns>
    <columns>JMC_SubCanalVenta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cartera__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cartera</label>
</ListView>