unpackaged/main/default/objects/Lead/listViews/CORDINADOR.listView-meta.xml
<ListView>
    <fullName>CORDINADOR</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>JMC_Analisisinterno__c</columns>
    <columns>JMC_Fraccionamiento__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>JMC_Fuente__c</columns>
    <columns>JMC_UEN__c</columns>
    <filterScope>Everything</filterScope>
    <label>SEGUIMIENTO COORDINADOR- LP</label>
</ListView>