unpackaged/main/default/objects/Lead/listViews/Seguimiento_Lead_Profiler.listView-meta.xml
<ListView>
    <fullName>Seguimiento_Lead_Profiler</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.MIDDLE_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>JMC_Analisisinterno__c</columns>
    <columns>JMC_Fraccionamiento__c</columns>
    <columns>JMC_TipoCredito__c</columns>
    <columns>JMC_CanalVenta__c</columns>
    <columns>JMC_SubCanalVenta__c</columns>
    <columns>Asesores__c</columns>
    <columns>JMC_Genero__c</columns>
    <columns>JMC_Re_Registro__c</columns>
    <filterScope>Mine</filterScope>
    <label>Seguimiento Lead Profiler</label>
</ListView>